add image space

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,10 +1,13 @@
 [MigrateInfo]
 ;1:local files(local files) 2: urllist file(url list) 3:qiniu(qiniu)
 migrate.type = 1
+;migrate.type = 2
 [Local]
+;must be absolute path
 local.image_root_path = /Users/jamis/Desktop/testdir
 [UrlList]
-url.url_list_file_path = ../conf/url_list
+;must be absolute path
+url.url_list_file_path = /Users/jamis/Desktop/urllist
 [Qiniu]
 qiniu.bucket=test
 qiniu.AccessKey=
@@ -13,9 +16,19 @@ qiniu.domain=cos.myqcloud.com
 qiniu.start_offset=
 qiniu.total_num=
 [AppInfo]
-appinfo.appid = 10000037
-appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
-appinfo.secretKey = P4FewbltIpGeAbwgdrG6eghMUVlpmjIe
-appinfo.bucket = bucket
+;appinfo.appid = 10000037
+;appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
+;appinfo.secretKey = P4FewbltIpGeAbwgdrG6eghMUVlpmjIe
+;appinfo.bucket = bucket
+
+;appinfo.appid = 10000002
+;appinfo.secretID = AKIDL5iZVplWMenB5Zrx47X78mnCM3F5xDbC
+;appinfo.secretKey = Lraz7n2vNcyW3tiP646xYdfr5KBV4YAv
+;appinfo.bucket = test1
+
+appinfo.appid = 10001818
+appinfo.secretID = AKID1Q25kCKsgs5ZTlGsdzXi0z394LptiQQS
+appinfo.secretKey = tQSzSEj6hvc1e43X5ejExIuG9lihGcdR
+appinfo.bucket = tencentyun
 [ToolConfig]
-Concurrency=1
+Concurrency=3
