--- a/conf/config.ini
+++ b/conf/config.ini
@@ -4,7 +4,7 @@ migrate.type = 1
 ;migrate.type = 2
 [Local]
 ;must be absolute path
-local.image_root_path = /Users/jamis/Desktop/testdir
+local.image_root_path = /data/qianyi/images
 [UrlList]
 ;must be absolute path
 url.url_list_file_path = /Users/jamis/Desktop/urllist
@@ -31,4 +31,4 @@ appinfo.secretID = AKID1Q25kCKsgs5ZTlGsdzXi0z394LptiQQS
 appinfo.secretKey = tQSzSEj6hvc1e43X5ejExIuG9lihGcdR
 appinfo.bucket = tencentyun
 [ToolConfig]
-Concurrency=3
+Concurrency=50
