--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,14 +1,14 @@
+; section names and option names are case insensitive
 [MigrateInfo]
-;1:local files(local files) 2: urllist file(url list) 3:qiniu(qiniu)
+; 1:local files(local files) 2: urllist file(url list) 3:qiniu(qiniu)
 migrate.type = 1
-;migrate.type = 2
 [Local]
-;must be absolute path
+; must be absolute path
 ;local.image_root_path = /data/qianyi/images
 local.image_root_path = /Users/jamis/Desktop/testdir
 [UrlList]
-;must be absolute path
-url.url_list_file_path = /Users/jamis/Desktop/urllist
+; must be absolute path
+url.url_list_file_path = /Users/jamis/Desktop/testdir/urllist
 [Qiniu]
 qiniu.bucket=test
 qiniu.AccessKey=
@@ -17,19 +17,16 @@ qiniu.domain=cos.myqcloud.com
 qiniu.start_offset=
 qiniu.total_num=
 [AppInfo]
-;appinfo.appid = 10000037
-;appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
-;appinfo.secretKey = P4FewbltIpGeAbwgdrG6eghMUVlpmjIe
-;appinfo.bucket = bucket
+appinfo.appid = 10000037
+appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
+appinfo.secretKey = P4FewbltIpGeAbwgdrG6eghMUVlpmjIe
+appinfo.bucket = test0706
 
 ;appinfo.appid = 10000002
 ;appinfo.secretID = AKIDL5iZVplWMenB5Zrx47X78mnCM3F5xDbC
 ;appinfo.secretKey = Lraz7n2vNcyW3tiP646xYdfr5KBV4YAv
 ;appinfo.bucket = test1
 
-appinfo.appid = 10001818
-appinfo.secretID = AKID1Q25kCKsgs5ZTlGsdzXi0z394LptiQQS
-appinfo.secretKey = tQSzSEj6hvc1e43X5ejExIuG9lihGcdR
-appinfo.bucket = tencentyun
 [ToolConfig]
-Concurrency=10
+; number of uploading processes
+Concurrency=50
