--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,7 +1,7 @@
 ; section names and option names are case insensitive
 [MigrateInfo]
 ; 1:local files(local files) 2: urllist file(url list) 3:qiniu(qiniu)
-migrate.type = 1
+migrate.type = 3
 [Local]
 ; must be absolute path
 ;local.image_root_path = /data/qianyi/images
@@ -10,12 +10,13 @@ local.image_root_path = /Users/jamis/Desktop/testdir
 ; must be absolute path
 url.url_list_file_path = /Users/jamis/Desktop/testdir/urllist
 [Qiniu]
-qiniu.bucket=test
-qiniu.AccessKey=
-qiniu.SecretKey=
-qiniu.domain=cos.myqcloud.com
-qiniu.start_offset=
-qiniu.total_num=
+qiniu.bucket = test
+qiniu.AccessKey = _17terLxP-ZK7tma9jXgm7MuEOk72yP9OZBIP35G
+qiniu.SecretKey = PFw6JivhTAdNKRojaguUkC6tlFHAI9SBrjVYdfya
+qiniu.domain = http://7xkm4e.com1.z0.glb.clouddn.com/
+; count from 0
+qiniu.start_offset = 
+qiniu.total_num = 
 [AppInfo]
 appinfo.appid = 10000037
 appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
@@ -29,4 +30,4 @@ appinfo.bucket = test0706
 
 [ToolConfig]
 ; number of uploading processes
-Concurrency=50
+Concurrency=5
