add support for private bucket

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -10,13 +10,27 @@ local.image_root_path = /Users/jamis/Desktop/testdir
 ; must be absolute path
 url.url_list_file_path = /Users/jamis/Desktop/testdir/urllist
 [Qiniu]
-qiniu.bucket = test
-qiniu.AccessKey = _17terLxP-ZK7tma9jXgm7MuEOk72yP9OZBIP35G
-qiniu.SecretKey = PFw6JivhTAdNKRojaguUkC6tlFHAI9SBrjVYdfya
-qiniu.domain = http://7xkm4e.com1.z0.glb.clouddn.com/
+;qiniu.bucket = test
+;qiniu.AccessKey = _17terLxP-ZK7tma9jXgm7MuEOk72yP9OZBIP35G
+;qiniu.SecretKey = PFw6JivhTAdNKRojaguUkC6tlFHAI9SBrjVYdfya
+;qiniu.domain = http://7xkm4e.com1.z0.glb.clouddn.com/
+;; count from 0
+;qiniu.start_offset = 
+;qiniu.total_num = 
+
+qiniu.bucket = raw-jpg
+qiniu.AccessKey = ZAxd0f33vj02jDycSBAM_1_S-hcicHxPgn6v3kp2
+qiniu.SecretKey = 4D1BFeP3nrzID_9FJ-f5H7qJpWNywO5ZO3BsR8dH
+; domain should end up with "/"
+qiniu.domain = http://7xl0wi.com1.z0.glb.clouddn.com/
 ; count from 0
 qiniu.start_offset = 
 qiniu.total_num = 
+; leave it blank if none
+qiniu.referer = britax.com.cn
+; 1 or ture on this bucket is private
+qiniu.isprivate = 1
+
 [AppInfo]
 appinfo.appid = 10000037
 appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
