--- a/conf/config.ini
+++ b/conf/config.ini
@@ -27,7 +27,7 @@ qiniu.domain = http://7xl0wi.com1.z0.glb.clouddn.com/
 qiniu.start_offset = 
 qiniu.total_num = 
 ; leave it blank if none
-qiniu.referer = britax.com.cn
+qiniu.referer = http://britax.com.cn
 ; 1 or ture on this bucket is private
 qiniu.isprivate = 1
 
