--- a/conf/config.ini
+++ b/conf/config.ini
@@ -21,15 +21,15 @@ url.url_list_file_path = /Users/jamis/Desktop/testdir/urllist
 qiniu.bucket = raw-jpg
 qiniu.AccessKey = ZAxd0f33vj02jDycSBAM_1_S-hcicHxPgn6v3kp2
 qiniu.SecretKey = 4D1BFeP3nrzID_9FJ-f5H7qJpWNywO5ZO3BsR8dH
-; domain should end up with "/"
+; domain should start with http end up with "/"
 qiniu.domain = http://7xl0wi.com1.z0.glb.clouddn.com/
 ; count from 0
 qiniu.start_offset = 
 qiniu.total_num = 
-; leave it blank if none
+; should start with http, leave it blank if none
 qiniu.referer = http://britax.com.cn
 ; 1 or ture on this bucket is private
-qiniu.isprivate = 1
+qiniu.isprivate = True
 
 [AppInfo]
 appinfo.appid = 10000037
