update tencentyun bucket

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -32,15 +32,15 @@ qiniu.referer = http://britax.com.cn
 qiniu.isprivate = True
 
 [AppInfo]
-appinfo.appid = 10000037
-appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
-appinfo.secretKey = P4FewbltIpGeAbwgdrG6eghMUVlpmjIe
-appinfo.bucket = test0706
+;appinfo.appid = 10000037
+;appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
+;appinfo.secretKey = P4FewbltIpGeAbwgdrG6eghMUVlpmjIe
+;appinfo.bucket = test0706
 
-;appinfo.appid = 10000002
-;appinfo.secretID = AKIDL5iZVplWMenB5Zrx47X78mnCM3F5xDbC
-;appinfo.secretKey = Lraz7n2vNcyW3tiP646xYdfr5KBV4YAv
-;appinfo.bucket = test1
+appinfo.appid = 10001818
+appinfo.secretID = AKID1Q25kCKsgs5ZTlGsdzXi0z394LptiQQS
+appinfo.secretKey = tQSzSEj6hvc1e43X5ejExIuG9lihGcdR
+appinfo.bucket = citest
 
 [ToolConfig]
 ; number of uploading processes
