--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,23 +1,20 @@
 ; section names and option names are case insensitive
+
 [MigrateInfo]
 ; 1:local files(local files) 2: urllist file(url list) 3:qiniu(qiniu)
-migrate.type = 3
+migrate.type = 1
+
 [Local]
 ; must be absolute path
 ;local.image_root_path = /data/qianyi/images
-local.image_root_path = /Users/jamis/Desktop/testdir
+;local.image_root_path = /Users/jamis/Desktop/testdir
+local.image_root_path = /Users/jamis/Desktop/temp
+
 [UrlList]
 ; must be absolute path
 url.url_list_file_path = /Users/jamis/Desktop/testdir/urllist
-[Qiniu]
-;qiniu.bucket = test
-;qiniu.AccessKey = _17terLxP-ZK7tma9jXgm7MuEOk72yP9OZBIP35G
-;qiniu.SecretKey = PFw6JivhTAdNKRojaguUkC6tlFHAI9SBrjVYdfya
-;qiniu.domain = http://7xkm4e.com1.z0.glb.clouddn.com/
-;; count from 0
-;qiniu.start_offset = 
-;qiniu.total_num = 
 
+[Qiniu]
 qiniu.bucket = raw-jpg
 qiniu.AccessKey = ZAxd0f33vj02jDycSBAM_1_S-hcicHxPgn6v3kp2
 qiniu.SecretKey = 4D1BFeP3nrzID_9FJ-f5H7qJpWNywO5ZO3BsR8dH
@@ -45,3 +42,10 @@ appinfo.bucket = citest
 [ToolConfig]
 ; number of uploading processes
 Concurrency=5
+
+[Advanced]
+; these options are for customized users
+; they may be removed in a future version
+; don't touch if u don't know what u are doing
+sub.pattern = (20[0-9]{2}/[0-9]{2}/[0-9]{2}/)(.*)
+sub.replace = \g<1>1024_1024/\g<2>
