--- a/conf/config.ini
+++ b/conf/config.ini
@@ -47,5 +47,5 @@ Concurrency=5
 ; these options are for customized users
 ; they may be removed in a future version
 ; don't touch if u don't know what u are doing
-sub.pattern = (20[0-9]{2}/[0-9]{2}/[0-9]{2}/)(.*)
-sub.replace = \g<1>1024_1024/\g<2>
+;sub.pattern = (20[0-9]{2}/[0-9]{2}/[0-9]{2}/)(.*)
+;sub.replace = \g<1>1024_1024/\g<2>
