clear config.ini

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -6,38 +6,31 @@ migrate.type = 1
 
 [Local]
 ; must be absolute path
-;local.image_root_path = /data/qianyi/images
-;local.image_root_path = /Users/jamis/Desktop/testdir
-local.image_root_path = /Users/jamis/Desktop/temp
+local.image_root_path = /root
 
 [UrlList]
 ; must be absolute path
-url.url_list_file_path = /Users/jamis/Desktop/temp/urllist
+url.url_list_file_path = /root/urllist
 
 [Qiniu]
-qiniu.bucket = raw-jpg
-qiniu.AccessKey = ZAxd0f33vj02jDycSBAM_1_S-hcicHxPgn6v3kp2
-qiniu.SecretKey = 4D1BFeP3nrzID_9FJ-f5H7qJpWNywO5ZO3BsR8dH
+qiniu.bucket = bucket_name
+qiniu.AccessKey = AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+qiniu.SecretKey = AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 ; domain should start with http end up with "/"
-qiniu.domain = http://7xl0wi.com1.z0.glb.clouddn.com/
+qiniu.domain = http://aaaaa.glb.clouddn.com/
 ; count from 0
 qiniu.start_offset = 
 qiniu.total_num = 
 ; should start with http, leave it blank if none
-qiniu.referer = http://britax.com.cn
+qiniu.referer = 
 ; 1 or ture on this bucket is private
-qiniu.isprivate = True
+qiniu.isprivate = False
 
 [AppInfo]
-;appinfo.appid = 10000037
-;appinfo.secretID = AKIDpoKBfMK7aYcYNlqxnEtYA1ajAqji2P7T
-;appinfo.secretKey = P4FewbltIpGeAbwgdrG6eghMUVlpmjIe
-;appinfo.bucket = test0706
-
-appinfo.appid = 10001818
-appinfo.secretID = AKID1Q25kCKsgs5ZTlGsdzXi0z394LptiQQS
-appinfo.secretKey = tQSzSEj6hvc1e43X5ejExIuG9lihGcdR
-appinfo.bucket = citest
+appinfo.appid = 10000000
+appinfo.secretID = AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+appinfo.secretKey = AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+appinfo.bucket = bucket_name
 
 [ToolConfig]
 ; number of uploading processes
@@ -47,5 +40,3 @@ Concurrency=5
 ; these options are for customized users
 ; they may be removed in a future version
 ; don't touch if u don't know what u are doing
-;sub.pattern = (20[0-9]{2}/[0-9]{2}/[0-9]{2}/)(.*)
-;sub.replace = \g<1>1024_1024/\g<2>
